--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ a {
     color: #cacaca;
 }
 
-.navigation-list .item-active {
+.item-active a {
     color: #766357;
 }
 
@@ -289,6 +289,9 @@ a {
     display: flex;
     width: 570px;
     min-height: 395px;
+    -webkit-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.30);
+    -moz-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.30);
+    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.30);
 }
 
 .search-form p {
@@ -302,9 +305,8 @@ a {
 .search-form-wrapper {
     display: flex;
     flex-wrap: wrap;
+    align-content: space-between;
     padding: 55px;
-
-    border: 1px solid;
 }
 
 .date-wrapper input {
@@ -313,40 +315,111 @@ a {
     border: 0;
     background-color: #f2f2f2;
     font-family: inherit;
-    color: #000000;
     font-weight: 700;
     text-transform: uppercase;
-    margin-right: 0;
+    margin-left: auto;
+    box-sizing: border-box;
+    padding-top: 6px;
+    padding-left: 9px;
+}
+
+.date-wrapper input[type="text"]::-webkit-input-placeholder {
+    color: #000000;
+} 
+.date-wrapper input[type="text"]::-moz-placeholder {
+    color: #000000;
 }
 
 .date-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: baseline;
-    align-items: flex-start;
-    min-width: 460px;
-    min-height: 105px;
+    justify-content: space-between;
+    width: 100%;
+    height: 105px;
+}
+
+.date-wrapper p {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.date-wrapper label {
+    padding-top: 12px;
+}
+
+.calendar-btn {
+    position: absolute;
+    border: 0;
+    top: 6px;
+    right: 6px;
+    padding: 0;
+    margin: 0;
 }
 
 .calc-wrapper {
     display: flex;
-    justify-content: space-around;
+    width: 100%;
+
+    padding-bottom: 25px;
 }
 
 .calc-wrapper input {
     width: 38px;
     height: 38px;
     border: 0;
+    box-sizing: border-box;
+
+    padding-top: 3px;
+    padding-left: 16px;
+
+    background-color: #f2f2f2;
+    margin-left: -4px;
+    margin-right: -4px;
+
+    font-weight: 700;
 }
 
-.minus,
-.plus {
-    font-family: inherit;
+.calc-wrapper p:nth-child(2) {
+    margin-left: auto;
+}
+
+.calc-wrapper p:first-child label {
+    padding-right: 38px;
+}
+.calc-wrapper p:nth-child(2) label {
+    padding-right: 25px;
+}
+
+.calc-btn {
+    border: 0;
+    width: 38px;
+    height: 38px;
+    padding: 0;
+    background-color: #f2f2f2;
 }
 
 .search-button {
     width: 100%;
+    height: 58px;
+
+    padding: 0;
+    border: 0;
+
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #ffffff;
+    background-color: #81b3d2;
+}
+
+.search-button:hover,
+.search-button:focus {
+    background-color: #669ec0;
+}
+
+.search-button:active {
+    opacity: 0.3;
+    background-color: #5496bd;
 }
 
 .container {
@@ -495,6 +568,292 @@ a {
     margin-right: 90px;
 }
 
+.catalog-filter {
+    min-height: 217px;
+    background-image: url(../img/filter-background.jpg);
+    background-position: 50% 15%;
+    background-repeat: no-repeat;
+    background-color: darkslategray;
+}
+
+.filter-wrapper {
+    display: flex;
+
+    box-sizing: border-box;
+    padding: 25px 70px;
+}
+
+.filter-infrastructure {
+    min-width: 275px;
+}
+
+.filter-housing {
+    padding-left: 15px;
+}
+
+.filter-theme {
+    display: block;
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 21px;
+
+    color: #ffffff;
+
+    padding-bottom: 25px;
+}
+
+.filter-infrastructure-list,
+.filter-housing-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.filter-infrastructure-item,
+.filter-housing-item {
+    font-family: inherit;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+
+    color: #ffffff;
+
+    padding-bottom: 20px;
+}
+
+.filter-infrastructure-item:nth-child(3),
+.filter-housing-item:nth-child(3) {
+    padding-bottom: 0;
+}
+  
+.catalog-sort {
+    box-sizing: border-box;
+    padding-left: 72px;
+    padding-right: 72px;
+
+    height: 86px;
+}
+
+.sort-wrapper {
+    display: flex;
+    align-items: baseline;
+}
+
+.sort-list,
+.up-down-list {
+    display: flex;
+    align-items: baseline;
+
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.sort-found {
+    font-size: 21px;
+    line-height: 26px;
+    font-weight: 700;
+
+    padding-top: 30px;
+    padding-right: 48px;
+}
+
+.sort-type,
+.sort-item {
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 400;
+}
+
+.sort-type {
+    padding-right: 40px;
+}
+
+.sort-list .sort-item {
+    padding-right: 30px;
+}
+
+.up-down-list {
+    margin-left: auto;
+}
+
+.sort-item a {
+    color: #b2b2b2;
+    text-decoration: underline;
+    text-decoration-color: #81b3d2;
+    text-decoration-style: dotted;
+}
+
+.hover-sort-item a{
+    color: #81b3d2;
+
+    text-decoration: none;
+}
+
+.sort-item a:hover,
+.sort-item a:focus {
+    color: #81b3d2;
+}
+
+.sort-item a:active {
+    color: #000000;
+}
+
+.up-down-btn {
+    border: 0;
+}
+
+.up-down-btn path {
+    fill: #b2b2b2;
+}
+
+.active-btn path {
+    fill: #81b3d2;
+}
+
+.up-down-btn path:hover,
+.up-down-btn path:focus {
+    fill: #000000;
+}
+
+.up-down-btn path:active {
+    fill: #81b3d2;
+}
+
+.filter-range {
+    color: #ffffff;
+    text-transform: uppercase;
+
+    margin-left: auto;
+  }
+  
+  .filter-range-title {
+    margin-bottom: 9px;
+  
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 21px;
+  }
+  
+  .price-controls {
+    position: relative;
+    
+    height: 36px;
+    margin-bottom: 20px;
+    
+    font-size: 0;
+  
+    border: 2px solid #ffffff;
+    border-radius: 2px;
+  }
+  
+  .price-controls::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  
+    width: 2px;
+    height: 22px;
+  
+    background: #ffffff;
+    transform: translate(-50%, -50%);
+  }
+  
+  .price-controls label {
+    display: inline-block;
+  
+    font-size: 14px;
+    line-height: 38px;
+    vertical-align: top;
+  
+    cursor: pointer;
+  }
+  
+  .price-controls .min-price,
+  .price-controls .max-price {
+    width: 90px;
+    padding-left: 65px;
+  }
+  
+  .price-controls input {
+    width: 50px;
+    margin: 0;
+  
+    color: inherit;
+    font: inherit;
+  
+    background: none;
+    border: none;
+  }
+  
+  .range-controls {
+    position: relative;
+  
+    margin-bottom: 32px;
+  }
+  
+  .range-controls .scale {
+    height: 2px;
+  
+    background: rgba(255, 255, 255, 0.3);
+  }
+  
+  .range-controls .bar {
+    width: 80%;
+    height: 2px;
+  
+    background: #ffffff;
+  }
+  
+  .range-toggle {
+    position: absolute;
+    top: -9px;
+    
+    width: 4px;
+    height: 4px;
+  
+    background: #ababab;
+    border: 8px solid #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+    cursor: pointer;
+  }
+  
+  .range-toggle:hover {
+    background: #1c4f80;
+  }
+  
+  .range-toggle-min {
+    left: 0;
+  }
+  
+  .range-toggle-max {
+    left: 80%;
+  }
+  
+  .btn-transparent {
+    display: block;
+    margin: 0 auto;
+    padding: 6px 35px;
+  
+    font-size: 14px;
+    line-height: 20px;
+    color: #ffffff;
+    text-transform: uppercase;
+  
+    background: transparent;
+    border: 2px solid #ffffff;
+    border-radius: 2px;
+    cursor: pointer;
+  }
+  
+  .btn-transparent:hover {
+    color: #000000;
+  
+    background: #ffffff;
+  }
 
 
 
