--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ a {
     font-weight: 700;
     background-color: #ffffff;
     min-height: 56px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-top: 17px;
     position: relative;
 }
@@ -61,7 +62,8 @@ a {
 
     background-color: darkslategray;
     min-height: 510px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-top: 76px;
     text-align: center;
 
@@ -125,7 +127,8 @@ a {
 
     width: 570px;
     min-height: 87px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-top: 32px;
 }
 
@@ -147,8 +150,12 @@ a {
 }
 
 .footer-social-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 151px;
     padding: 0;
     margin-top: 16px;
@@ -156,9 +163,15 @@ a {
 }
 
 .footer-social-list li {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 
     width: 46px;
     height: 48px;
@@ -246,7 +259,8 @@ a {
     height: 27px;
 
     text-align: center;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-top: 5px;
     margin-bottom: -4px;
 }
@@ -296,16 +310,23 @@ a {
     color: #666666;
     background-color: #f2f2f2;
     text-align: center;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-top: 5px;
     margin-left: auto;
 }
 
 .rating-stars {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
     margin-bottom: auto;
-    order: -1;
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
     list-style: none;
 }
 
@@ -314,13 +335,14 @@ a {
 }
 
 .search-form {
-    animation-name: crawled;
-    animation-duration:1s ;
+    -webkit-animation-name: crawled;
+            animation-name: crawled;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
 
     width: 570px;
     min-height: 395px;
     -webkit-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.30);
-    -moz-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.30);
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.30);
 
     position: absolute;
@@ -330,13 +352,27 @@ a {
     display: none;
 }
 
-@keyframes crawled {
+@-webkit-keyframes crawled {
     0% {
-      transform: translateY(0px);
+      -webkit-transform: translateY(0px);
+              transform: translateY(0px);
     }
   
     50% {
-      transform: translateY(5px);
+      -webkit-transform: translateY(5px);
+              transform: translateY(5px);
+    }
+  }
+
+@keyframes crawled {
+    0% {
+      -webkit-transform: translateY(0px);
+              transform: translateY(0px);
+    }
+  
+    50% {
+      -webkit-transform: translateY(5px);
+              transform: translateY(5px);
     }
   }
 
@@ -353,9 +389,13 @@ a {
 }
 
 .search-form-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    align-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-line-pack: justify;
+        align-content: space-between;
     padding: 55px;
 }
 
@@ -368,7 +408,8 @@ a {
     font-weight: 700;
     text-transform: uppercase;
     margin-left: auto;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-top: 0;
     padding-left: 10px;
     cursor: pointer;
@@ -392,16 +433,27 @@ a {
 }
 
 .date-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 100%;
     height: 105px;
 }
 
 .date-wrapper p {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     position: relative;
 }
 
@@ -434,11 +486,14 @@ a {
 }
 
 .btn-plus-svg {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-top: 3px;
 }
 
 .calc-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
 
@@ -449,7 +504,8 @@ a {
     width: 38px;
     height: 38px;
     border: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     padding-top: 1px;
     padding-left: 13px;
@@ -462,9 +518,15 @@ a {
 }
 
 .calc-wrapper p {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .calc-wrapper p:nth-child(2) {
@@ -480,8 +542,12 @@ a {
 
 .calc-btn {
     fill: #a9a9a9;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     border: 0;
     width: 43px;
     height: 38px;
@@ -530,13 +596,14 @@ a {
     width: 1200px;
     margin: 0 auto;
     -webkit-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.75);
 
     position: relative;
 }                        
 
 .navigation-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
     width: 1200px;
@@ -544,11 +611,17 @@ a {
 }
 
 .navigation-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin: 0;
-    flex-wrap: wrap;
-    box-sizing: border-box;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-left: 71px;
     padding-right: 71px;
 
@@ -596,11 +669,16 @@ a {
 }
 
 .main-footer-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 100%;
     min-height: 120px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-left: 70px;
     padding-right: 70px;
     padding-bottom: 8px;
@@ -614,19 +692,32 @@ a {
 }
 
 .interest {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 28px;
 
     position: relative;
 }
 
 .catalog-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+
+            box-sizing: border-box;
     padding-left: 71px; 
     padding-right: 71px;
     min-height: 152px;
@@ -644,30 +735,49 @@ a {
 }
 
 .catalog-item-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+
+            box-sizing: border-box;
     padding-top: 27px;
     padding-bottom: 30px;
     width: 450px;
 }
 
 .catalog-item-wrapper .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    align-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-line-pack: justify;
+        align-content: space-between;
 
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+
+            box-sizing: border-box;
     padding-left: 34px;
 }
 
 .rating-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
     margin-left: auto;
 
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+
+            box-sizing: border-box;
     padding: 31px 0;
 }
 
@@ -687,8 +797,12 @@ a {
 }
 
 .footer-copyright a {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
     margin-right: 31px;
 }
 
@@ -702,8 +816,12 @@ a {
 }
 
 .footer-social {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     min-width: 400px;
     margin-right: 91px;
 }
@@ -717,9 +835,13 @@ a {
 }
 
 .filter-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+
+            box-sizing: border-box;
     padding-left: 71px;
     padding-right: 71px;
     padding-top: 28px;
@@ -778,7 +900,8 @@ a {
     padding: 5px 0;
     position: relative;
     text-align: left;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-left: 41px; 
     cursor: pointer;
 }
@@ -818,7 +941,8 @@ a {
 }
   
 .catalog-sort {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-left: 71px;
     padding-right: 71px;
 
@@ -826,14 +950,22 @@ a {
 }
 
 .sort-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: baseline;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
 }
 
 .sort-list,
 .up-down-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: baseline;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
 
     margin: 0;
     padding: 0;
@@ -954,7 +1086,9 @@ a {
     height: 22px;
   
     background: #ffffff;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 }
   
 .price-controls label {
@@ -1017,12 +1151,15 @@ a {
     background: #ababab;
     border: 8px solid #ffffff;
     border-radius: 50%;
-    box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+    -webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+            box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
     cursor: pointer;
 }
   
 .range-toggle:hover {
-    transform: scale(1.2); 
+    -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+            transform: scale(1.2); 
 }
   
 .range-toggle-min {
@@ -1056,8 +1193,11 @@ a {
 }
 
 .main-reasons-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 
     margin: 0;
     padding: 0;
@@ -1067,6 +1207,8 @@ a {
 }
 
 .secondary-reasons-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
     margin: 0;
@@ -1080,7 +1222,8 @@ a {
 }
 
 .secondary-reasons-item-wrapper {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-left: 30px;
     padding-right: 30px;
 }
@@ -1097,13 +1240,22 @@ a {
 }
 
 .main-part-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .main-reasons-item-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 
     width: 400px;
     height: 256px;
@@ -1113,7 +1265,9 @@ a {
 }
 
 .main-reasons-item:nth-child(2) .main-part-wrapper img {
-    order: -1;
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
 }
 
 .main-reasons-item-wrapper h3 {
@@ -1188,5 +1342,7 @@ a {
 }
 
 .modal-show {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
